# 6.830FinalProject

./: .gitignore  README.md  benchmark_joins_graphs.ipynb
benchmark_joins/: Cargo.toml  benchmark_joins_graphs.ipynb  profiler.sh  verify_joins.py
benchmark_joins/experiments/: meds.json  smalls.json
benchmark_joins/experiments/100K_left_select20/: 100K_left_select20.json
benchmark_joins/experiments/100M_left_select20/: 100M_left_select20.json
benchmark_joins/experiments/10K_left_select10/: 10K_left_select10.json
benchmark_joins/experiments/10K_left_select20/: 10K_left_select20.json
benchmark_joins/experiments/10M_left_select20/: 10M_left_select20.json
benchmark_joins/experiments/1M_left_select20/: 1M_left_select20.json
benchmark_joins/experiments/bnl_100K_left_select20/: bnl_100K_left_select20.json
benchmark_joins/experiments/bnl_10K_left_select20/: bnl_10K_left_select20.json
benchmark_joins/src/: design.txt  dummy.csv  field.rs  join.rs  jointest.rs  lib.rs  main.rs  parjoin.rs  radixjoin.rs  readtable.rs  record.rs  runner.rs  table.rs  table_generator.rs
benchmark_joins/tables/: med1.csv  med2.csv  small2.csv
benchmark_joins/tables/10K_left_select10/: 10KR_10C.csv
benchmark_joins/tables/10K_left_select10/rights/: 10KR_10C_select10_left5_right5.csv  2KR_10C_select10_left5_right5.csv  4KR_10C_select10_left5_right5.csv  6KR_10C_select10_left5_right5.csv  8KR_10C_select10_left5_right5.csv
benchmark_joins/tables/10K_left_select20/: 10KR_10C.csv
benchmark_joins/tests/: jointest.rs  recordtest.rs
dbclassplots/: 10K_left_select10.json  (+1 more)
(+5 files in other folders)
