[package]
name = "benchmark_joins"
version = "0.1.0"
authors = ["Amir Fahat <amirf@mit.edu>", "David Morejon <dmorejon@mit.edu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.20"
strum_macros = "0.20"
rand = "0.8.0"