[package]
name = "benchmark_joins"
version = "0.1.0"
authors = ["Amir Fahat <amirf@mit.edu>", "David Morejon <dmorejon@mit.edu"]
edition = "2018"
default-run = "benchmark_joins"

[[bin]]
name = "generate"
path = "src/bin/generate/main.rs"

[lib]
name = "joinlib"

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.20"
strum_macros = "0.20"
rand = "0.8.0"
rayon = "1.5"
itertools = "0.10.0"
chashmap = "2.2.2"